cluster/base/mattermost/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermostdb
  namespace: mattermost
spec:
  type: ClusterIP
  selector:
    app: mattermostdb
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
