cluster/base/mattermost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: mattermost
spec:
  type: ClusterIP
  selector:
    app: mattermost
  ports:
  - port: 8065
    targetPort: 8065
    protocol: TCP
    name: http
